--- a/ArtGallery/ArtGallery/Views/Product/Index.cshtml
+++ b/ArtGallery/ArtGallery/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
     </p>
 </form>
 
-<div>
+@* <div>
    <form>
   <div class="form-row align-items-center">
     
@@ -38,9 +38,9 @@
   </div>
 </form>
 </div>
+ *@
 
-
-<div class="w-100 d-flex flex-wrap">
+@* <div class="w-100 d-flex flex-wrap">
     @for(int i=1; i<4;i++)
     {
         <div class="card mx-2 mb-4" style="width: 16rem;">
@@ -54,7 +54,7 @@
         </div>
     }
 
-</div>
+</div> *@
 
 
 <table class="table">
