--- a/ArtGallery/ArtGallery/Views/Product/Index.cshtml
+++ b/ArtGallery/ArtGallery/Views/Product/Index.cshtml
@@ -14,8 +14,20 @@
 
 <form asp-controller="Product" asp-action="Index" method="get">
     <p>
+        <!-- Category Dropdown -->
+        <div class="btn-group">
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Categories...
+            </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" asp-action="Index">Paintings</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Separated link</a>
+            </div>
+        </div>
         Artist: <input type="text" name="SearchStringArtistName" />
-        Category: <input type="text" name="SearchStringCategoryName" />
 
         <input type="submit" value="Filter" />
     </p>
@@ -58,7 +70,7 @@
                     </h5>
                     <p class="card-text"> @Html.DisplayFor(modelItem => item.ArtistName)</p>
                     <h6 class="card-text text-danger">@Html.DisplayFor(modelItem => item.Price) lv.</h6>
-                    
+
                     @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Admin")))
                     {
                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn"><i class="bi bi-pencil-square"></i></a>
@@ -67,15 +79,55 @@
                     {
                         <a asp-action="Delete" asp-route-id="@item.Id" class="btn"><i class="bi bi-trash"></i></a>
                     }
-                    <a href="#" class="btn btn-dark">Add to Cart</a>
+                    <!--<a class="btn btn-dark" onclick="addToCart(@item.Id)">Add to Cart</a>-->
+                    <button type="button" onclick="add(@item.Id)" class="btn btn-primary">Add to cart</button>
+
+
                 </div>
             </div>
         </div>
     }
 </div>
 
+<form id="csrf-form">
+    @Html.AntiForgeryToken()
+</form>
+
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+
+    <script>
+                async function add(bookId) {
+            try {
+                // Send request to add item to cart
+                var response = await fetch(`/Cart/AddItem?productId=${bookId}&quantity=1`, {
+                    method: 'GET', // Method, assuming you are using GET for this action
+                    headers: {
+                        'Accept': 'application/json',
+                        'RequestVerificationToken': $('input[name="__RequestVerificationToken"]').val() // Include CSRF token
+                    }
+                });
+
+                // If the user is authenticated and the cart is updated
+                if (response.status == 200) {
+                    var result = await response.json();
+                    // Update cart count on the page
+                    var cartCountEl = document.getElementById("cartCount");
+                    cartCountEl.innerHTML = result;
+                    window.location.href = "#cartCount";
+                } else {
+                    // If not authenticated, server will handle the redirect to login
+                    window.location.href = "/Identity/Account/Login";
+                }
+            } catch (err) {
+                console.log(err);
+            }
+        }
+
+    </script>
+
 }
+
