checkout form done but can't order.

--- a/ArtGallery/ArtGallery/Views/Cart/Checkout.cshtml
+++ b/ArtGallery/ArtGallery/Views/Cart/Checkout.cshtml
@@ -28,12 +28,12 @@
 
     <div class="py-2">
         <label asp-for="Address">Address</label>
-        <textarea class="form-control" asp-for="Address" rows="5"> </textarea>
+        <textarea class="form-control" asp-for="Address"> </textarea>
         <span asp-validation-for="Address" class="text-danger"></span>
     </div>
 
     <div class="py-2">
-        <span class="mr-2">COD*</span>
+        <span class="mr-2">Payment Method</span>
         <select asp-for="PaymentMethod" class="form-control">
             <option value="">Select Payment Method</option>
             @foreach (var method in Enum.GetValues(typeof(ArtGallery.Infrastructure.Data.Entities.Enum.PaymentMethods)))
