--- a/ArtGallery/ArtGallery/Views/Cart/GetUserCart.cshtml
+++ b/ArtGallery/ArtGallery/Views/Cart/GetUserCart.cshtml
@@ -50,7 +50,7 @@
         </div>
 
         <div class="my-2">
-            <a class="btn btn-dark" asp-controller="Product" asp-action="Index">Checkout</a>
+            <a class="btn btn-dark" href="/Cart/Checkout">Checkout</a>
         </div>
 
     }
